--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <!-- <link rel="icon" type="image/png" href="/favicon.png" /> -->
-        <link
-            rel="icon"
-            type="image/png"
-            href="/morning-basket-favicon-Truc-100-63.png"
-        />
+        <link rel="icon" type="image/png" href="/Logo-100x100.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700;800&family=Roboto:wght@400;700&display=swap"
             rel="stylesheet"
         />
-        <title>Morning Basket</title>
+        <title>Mama Shop</title>
     </head>
 
     <body>
